--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="preparestuff.js"></script>
+    <link rel="stylesheet" href="repos.css">
 </head>
 <body>
-    <h1>HELLO WORLD!</h1>
+    <h1>Leibniz-Psychology Repos</h1>
+    <div id="repos"></div>
 </body>
 </html>
